--- a/app.json
+++ b/app.json
@@ -9,12 +9,12 @@
     "SESSION_ID": {
       "description": "Put the session-id here.",
       "required": true,
-      "default": ""
+      "default": "gashwQRa#W3BwY8qs5efmIf8MCl8waKbTmOm4qQunBl7L0EhMD4Q"
     },
     "MONGODB": {
       "description": "Put your MongoDB Database URL here.",
       "required": true,
-      "default": ""
+      "default": "mongodb+srv://ja850738:N9PnkwWXAl90bD0N@cluster0.q9ylq.mongodb.net/"
     },
     "PREFIX": {
       "description": "Add Your Custom Prefix here.",
@@ -29,7 +29,7 @@
     "OWNER_NUMBER": {
       "description": "Owner Number",
       "required": true,
-      "default": "94718913389"
+      "default": "916282524515"
     },
     "ALIVE_IMG": {
       "description": "Put your alive img here.",
